--- a/css/style.scss
+++ b/css/style.scss
@@ -184,38 +184,7 @@ header {
 }
 //Settings nav bar
 nav{
-    position: absolute;
-    height: 11830px;
-    z-index: 10;
-
-    ul {
-        position: sticky;
-        top: 8vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        height: 500px;
-        width: 276px;
-
-    }
-
-    a {
-        text-decoration: none;
-        list-style: none;
-        width: fit-content;
-    
-    }
-
-    li {
-        display: block;
-        color: black;
-        font-family: "Space Mono";
-        background-color: var(--secondary-color);
-        width: fit-content;
-        font-size: 1.95vw;
-        text-align: center;
-    }
-
+    display: none;
 }
 //Settings di tutti i paragrafi e prima lettera del primo paragrafo
 .paragraph {
@@ -235,7 +204,6 @@ nav{
         padding: 1.3vw;
         padding-left: 15vw;
     }
-
 
 }
 //Settings primo paragrafo
@@ -395,7 +363,7 @@ nav{
 
     h1 {
         order: 1;
-        padding-top: 5vw;
+        padding-top: 4vw;
     }
 
     p{
@@ -517,7 +485,7 @@ nav{
         position: relative;
     }
     #c1 {
-        top: 9.3vw;
+        top: 10vw;
     }
     #c2{
         top: 36vw;
