--- a/css/style.scss
+++ b/css/style.scss
@@ -185,7 +185,7 @@ header {
 //Settings nav bar
 nav{
     position: absolute;
-    height: 11820px;
+    height: 769.53125vw;
     z-index: 10;
 
     ul {
@@ -194,7 +194,7 @@ nav{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        height: 500px;
+        height: 32.552083333333336vw;
         width: 13vw;
         padding-top: 2vw;
         background-color: #66666677;
