--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ header a img {
 
 nav {
   position: absolute;
-  height: 11820px;
+  height: 769.53125vw;
   z-index: 10;
 }
 
@@ -227,7 +227,7 @@ nav ul {
           flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  height: 500px;
+  height: 32.552083333333336vw;
   width: 13vw;
   padding-top: 2vw;
   background-color: #66666677;
