--- a/css/style.css
+++ b/css/style.css
@@ -1038,5 +1038,443 @@ footer h1 {
     font-weight: 500;
     margin-top: 2.60vw;
   }
+  .divisore-social {
+    height: 13vw;
+  }
+  .divisore-social .social-bar {
+    width: 100%;
+    border: none;
+  }
+  .divisore-social .social-bar h1 {
+    display: none;
+  }
+  .divisore-social .social-bar .social-links {
+    margin: 0px;
+    width: 38vw;
+    padding-top: 1vw;
+  }
+  .divisore-social .social-bar .social-links a {
+    height: 8.5vw;
+    width: 8.5vw;
+  }
+  .divisore-social .social-bar .social-links a div {
+    height: 8.5vw;
+    width: 8.5vw;
+  }
+  .divisore-social .social-bar .social-links a .facebook img, .divisore-social .social-bar .social-links a .twitter img, .divisore-social .social-bar .social-links a .mail img {
+    height: 4vw;
+    width: 4vw;
+  }
+  nav {
+    display: none;
+    position: fixed;
+    top: 0px;
+    z-index: 111;
+    height: auto;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
+  nav .line {
+    display: none;
+  }
+  nav ul {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.777);
+    margin-top: 15vw;
+    padding-top: 25vw;
+    padding-bottom: 50vw;
+  }
+  nav ul a {
+    margin-left: 25vw;
+    margin-right: 25vw;
+    height: 17vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  nav ul li {
+    font-size: 8vw;
+  }
+  label #btn {
+    position: fixed;
+    color: black;
+    font-size: 8vw;
+    top: 0px;
+    padding: 3vw;
+  }
+  label #cancel {
+    position: fixed;
+    color: black;
+    font-size: 10vw;
+    top: 0px;
+    padding: 3vw;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  #check:checked ~ label #btn {
+    opacity: 0;
+    pointer-events: none;
+  }
+  #check:checked ~ label #cancel {
+    opacity: 100;
+  }
+  #intro {
+    position: relative;
+    top: -15vw;
+  }
+  #commenti {
+    position: relative;
+    top: -15vw;
+  }
+  #lacrime {
+    position: relative;
+    top: -15vw;
+  }
+  #gol {
+    position: relative;
+    top: 45vw;
+  }
+  #occasioni {
+    position: relative;
+    top: -15vw;
+  }
+  #epilogo {
+    position: relative;
+    top: -15vw;
+  }
+  .paragraph #first::first-letter {
+    font-size: 10vw;
+  }
+  .paragraph p {
+    color: white;
+    width: 100%;
+    border: none;
+    padding-left: 7vw;
+    padding-right: 7vw;
+    font-size: 4.5vw;
+    font-weight: 300;
+  }
+  #p2 h1, #p4 h1, #p5 h1, #p6 h1, #p7 h1 {
+    color: white;
+    font-weight: 900;
+    font-size: 10vw;
+    width: 100%;
+    border-right: none;
+    padding-left: 7vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+  }
+  #p2 h1 b, #p4 h1 b, #p5 h1 b, #p6 h1 b, #p7 h1 b {
+    color: var(--secondary-color);
+  }
+  #p1 {
+    display: block;
+  }
+  #p1 .connect {
+    display: none;
+  }
+  #p1 .pullquote {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    padding-left: 3.5vw;
+  }
+  #p1 .pullquote h1 {
+    color: white;
+    font-size: 6vw;
+  }
+  #p1 .pullquote h2 {
+    font-size: 3.5vw;
+    margin-bottom: 3vw;
+  }
+  .divisore-ita {
+    display: none;
+  }
+  #p2 {
+    display: block;
+  }
+  #p2 h1 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 3vw;
+  }
+  #p2 p {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+  }
+  #p2 .connect {
+    display: none;
+  }
+  #p2 .vid-commenti {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p2 .vid-commenti iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p3 {
+    display: block;
+    margin: 0;
+  }
+  #p3 .connect {
+    display: none;
+  }
+  #p3 .vid-commenti2 {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p3 .vid-commenti2 iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p4 {
+    display: block;
+    margin: 0;
+  }
+  #p4 p {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    left: 0px;
+  }
+  #p4 .connect {
+    display: none;
+  }
+  #p4 .vid-lacrime {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p4 .vid-lacrime iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p5 {
+    padding-top: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: -65vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #p5 .connect {
+    display: none;
+  }
+  #p5 h1 {
+    padding-top: 0;
+    padding-bottom: 0;
+    height: auto;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 5vw;
+  }
+  #p5 .space {
+    display: none;
+  }
+  #p5 #p1 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+  }
+  #p5 .vid-gol-1 {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p5 .vid-gol-1 iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p5 #p2 {
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+  }
+  #p5 .vid-gol-2 {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p5 .vid-gol-2 iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p5 #p3 {
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+  }
+  #p5 .vid-gol-3 {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p5 .vid-gol-3 iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p6 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #p6 img {
+    display: none;
+  }
+  #p6 .par1 .connect {
+    display: none;
+  }
+  #p6 .par1 .vid-occasioni {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    margin: 0;
+    width: auto;
+    height: auto;
+    margin: 7vw;
+    left: 0;
+    padding-top: 2vw;
+  }
+  #p6 .par1 .vid-occasioni iframe {
+    height: 48vw;
+    width: 90vw;
+  }
+  #p7 {
+    margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 8.5vw;
+  }
+  #p7 h1 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  #p7 p {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    margin-top: 0;
+  }
+  #p7 .img-box {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: auto;
+    padding: 0;
+  }
+  #p7 .box1 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    position: relative;
+    height: auto;
+    margin: 0;
+    height: 48vw;
+    width: 85vw;
+    margin-bottom: 8.5vw;
+  }
+  #p7 #img1 {
+    height: 48vw;
+    width: 85vw;
+  }
+  #p7 .box2, #p7 .box3, #p7 .box4, #p7 .box5 {
+    display: none;
+  }
+  footer {
+    height: 10vw;
+  }
+  footer h1 {
+    font-size: 2vw;
+    font-weight: 300;
+    margin-top: 3.8vw;
+    margin-left: 2vw;
+  }
 }
 /*# sourceMappingURL=style.css.map */
