--- a/css/style.scss
+++ b/css/style.scss
@@ -919,5 +919,473 @@ footer{
 
     }
 
+    .divisore-social {
+
+        height: 13vw;
+
+        .social-bar {
+            width: 100%;
+            border: none;
+
+            h1 {
+                display: none;
+            }
+
+            .social-links {
+                margin: 0px;
+                width: 38vw;
+                padding-top: 1vw;
+
+
+                a {
+                    height: 8.5vw;
+                    width: 8.5vw;
+                    div {
+
+                        height: 8.5vw;
+                        width: 8.5vw; 
+                    }
+
+                    .facebook, .twitter, .mail {
+                        img{
+                            height: 4vw;
+                            width: 4vw;
+                        }    
+                    }
+                }
+
+                
+            }
+
+
+        }
+
+
+    }
+
+    nav {
+        display: none;
+        position: fixed;
+        top: 0px;
+        z-index: 111;
+        height: auto;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+
+        .line {
+            display: none;
+        }
+
+        ul {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.777);
+            margin-top: 15vw;
+            padding-top: 25vw;
+            padding-bottom: 50vw;
+
+            a {
+                margin-left: 25vw;
+                margin-right: 25vw;
+                height: 17vw;
+                align-items: center;
+            }
+
+            li {
+                font-size: 8vw;
+            }
+        }
+    }
+    label #btn {
+        position: fixed;
+        color: black;
+        font-size: 8vw;
+        top: 0px;
+        padding: 3vw;
+    }
+    
+    label #cancel {
+        position: fixed;
+       color: black;
+       font-size: 10vw;
+       top: 0px;
+       padding: 3vw;
+       transform: translateX(0%);
+    }
+
+    #check:checked ~ label #btn {
+        opacity: 0;
+        pointer-events: none;
+    }
+    
+    #check:checked ~ label #cancel {
+        opacity: 100;
+        
+    }
+
+    #intro {
+        position: relative;
+        top: -15vw;
+    }
+    #commenti {
+        position: relative;
+        top: -15vw;
+    }
+    
+    #lacrime {
+        position: relative;
+        top: -15vw;
+    }
+    
+    #gol {
+        position: relative;
+        top: 45vw;
+    }
+    
+    #occasioni {
+        position: relative;
+        top: -15vw;
+    }
+    
+    #epilogo {
+        position: relative;
+        top: -15vw;
+    }
+
+
+    .paragraph {
+
+        #first::first-letter {
+            font-size: 10vw;
+        }
+        p {
+            color: white;
+            width: 100%;
+            border: none;
+            padding-left: 7vw;
+            padding-right: 7vw;
+            font-size: 4.5vw;
+            font-weight: 300;
+        }
+    }
+
+    #p2, #p4, #p5, #p6, #p7 {
+        h1 {
+            color: white;
+            font-weight: 900;
+            font-size: 10vw;
+            b{
+                color: var(--secondary-color);
+            }
+            width: 100%;
+            border-right: none;
+            padding-left: 7vw;
+            padding-top: 2vw;
+            padding-bottom: 2vw;
+        }
+    }
+
+    #p1 {
+        display: block;
+
+        .connect {
+            display: none;
+        }
+
+        .pullquote {
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            padding-left: 3.5vw;
+
+            h1{
+                color: white;
+                font-size: 6vw;
+            }
+
+            h2 {
+                font-size: 3.5vw;
+                margin-bottom: 3vw;
+            }
+        }
+    }
+
+    .divisore-ita {
+        display: none;
+    }
+
+    #p2 {
+        display: block;
+
+        h1 {
+            order: 1;
+            margin-bottom: 3vw;
+        }
+
+        p {
+            transform: translate(0%, 0%);
+        }
+        
+        .connect {
+            display: none;
+        }
+
+        .vid-commenti {
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            left: 0;
+            padding-top: 2vw;
+
+            iframe {
+                height: 48vw;
+                width: 90vw;
+            }
+        }
+    }
+
+    #p3 {
+        display: block;
+        margin: 0;
+
+        .connect {
+            display: none;
+        }
+        .vid-commenti2 {
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            left: 0;
+            padding-top: 2vw;
+
+            iframe {
+                height: 48vw;
+                width: 90vw;
+            }
+        }
+    }
+
+    #p4 {
+        display: block;
+        margin: 0;
+
+        p {
+            order: 2;
+            transform: translate(0%, 0%);
+            left: 0px;
+        }
+
+        .connect {
+            display: none;
+        }
+        .vid-lacrime {
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            left: 0;
+            padding-top: 2vw;
+
+            iframe {
+                height: 48vw;
+                width: 90vw;
+            }
+        }
+    }
+
+    #p5 {
+        padding-top: 0px;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        margin-top: -65vw;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+
+        .connect {
+            display: none;
+        }
+
+        h1 {
+            padding-top: 0;
+            padding-bottom: 0;
+            height: auto;
+            order: 1;
+            margin-bottom: 5vw;
+        }
+
+        .space {
+            display: none;
+        }
+
+        #p1 {
+            order: 2;
+            padding-top: 2vw;
+            padding-bottom: 2vw;
+        }
+
+        .vid-gol-1 {
+            order: 3;
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            left: 0;
+            padding-top: 2vw;
+
+            iframe {
+                height: 48vw;
+                width: 90vw;
+            }
+            
+        }
+
+        #p2 {
+            padding-top: 2vw;
+            padding-bottom: 2vw;
+        }
+
+        .vid-gol-2 {
+
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            left: 0;
+            padding-top: 2vw;
+
+            iframe {
+                height: 48vw;
+                width: 90vw;
+            }
+            
+        }
+
+        #p3 {
+            padding-top: 2vw;
+            padding-bottom: 2vw;
+        }
+
+        .vid-gol-3 {
+            
+            transform: translate(0%, 0%);
+            margin: 0;
+            width: auto;
+            height: auto;
+            margin: 7vw;
+            left: 0;
+            padding-top: 2vw;
+
+            iframe {
+                height: 48vw;
+                width: 90vw;
+            }
+            
+        }
+
+        
+    }
+
+    #p6 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 0;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+
+        img{
+            display: none;
+        }
+
+        .par1{
+
+            .connect {
+                display: none;
+            }
+            .vid-occasioni {
+                transform: translate(0%, 0%);
+                margin: 0;
+                width: auto;
+                height: auto;
+                margin: 7vw;
+                left: 0;
+                padding-top: 2vw;
+
+                iframe {
+                    height: 48vw;
+                    width: 90vw;
+                }
+            }
+        }
+    }
+
+    #p7 {
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        padding-bottom: 8.5vw;
+
+        h1{
+            order: 1;
+        }
+        p {
+            order: 3;
+            margin-top: 0;
+
+        }
+
+        .img-box {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            height: auto;
+            padding: 0;
+        }
+
+        .box1 {
+            order: 2;
+            position: relative;
+            height: auto;
+            margin: 0;
+            height: 48vw;
+            width: 85vw;
+            margin-bottom: 8.5vw;
+        }
+
+        #img1 {
+            height: 48vw;
+            width: 85vw;
+        }
+
+        .box2, .box3, .box4, .box5 {
+            display: none;
+        }
+    }
+
+    footer {
+        height: 10vw;
+
+        h1 {
+            font-size: 2vw;
+            font-weight: 300;
+            margin-top: 3.8vw;
+            margin-left: 2vw;
+        }
+    }
 
 }
