--- a/css/style.scss
+++ b/css/style.scss
@@ -964,7 +964,7 @@ footer{
     }
 
     nav {
-        display: none;
+        //display: none;
         position: fixed;
         top: 0px;
         z-index: 111;
